--- a/index.css
+++ b/index.css
@@ -104,4 +104,5 @@
     /* padding: 0px; */
     box-shadow: 0px 0px 11px rgb(255 255 255 / 50%);
     border-radius: 35px;
+    cursor: pointer;
 }
