--- a/index.css
+++ b/index.css
@@ -106,3 +106,32 @@
     border-radius: 35px;
     cursor: pointer;
 }
+
+
+
+
+@media screen and (max-width: 530px)   {
+    .header__title {
+        font-size: 48px;
+    }
+}
+
+
+@media screen and (max-width: 230px)   {
+    .header__title {
+        font-size: 24px;
+    }
+    .action-button__button {
+        padding: 6px 42px;
+        background-color: #1c1c1c;
+        border: none;
+        outline: none;
+        color: white;
+        font-weight: 500;
+        font-size: 18px;
+        box-shadow: 0px 0px 11px rgb(255 255 255 / 50%);
+        border-radius: 35px;
+        cursor: pointer;
+    }
+}
+
